2010-01-21  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Simon Hausmann.

        Qt DRT: respect window.close() and window.closed()

        Qt DRT needs to maintain a correct count of open windows
        for windowCount(). It also needs to delete windows that
        have been closed by window.close().

        This fixes the following tests:

        plugins/destroy-during-npp-new.html
        fast/dom/Document/early-document-access.html
        fast/dom/Window/window-early-properties.html
        fast/events/open-window-from-another-frame.html
        fast/events/popup-blocking-click-in-iframe.html

        https://bugs.webkit.org/show_bug.cgi?id=32953

        * platform/qt/Skipped:

2010-01-20  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Carlson.

        [Gtk] media/video-currentTime-set.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=33897

        Refactored the test to use the "seeked" event.

        * media/video-currentTime-set-expected.txt:
        * media/video-currentTime-set.html:
        * platform/gtk/Skipped:

2010-01-21  Kent Tamura  <tkent@chromium.org>

        Unreviewed. Fix incorrect close tags.

        * fast/html/script-tests/article-element.js:
        * fast/html/script-tests/aside-element.js:
        * fast/html/script-tests/footer-element.js:
        * fast/html/script-tests/header-element.js:
        * fast/html/script-tests/section-element.js:

2010-01-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Stylesheet href property shows redirected URL unlike other browsers
        https://bugs.webkit.org/show_bug.cgi?id=33683

        Test whether the href property of style sheets contains the original or
        final URL of the redirect chain that lead to the style sheet.

        I couldn't figure out how to test the XSLStyleSheet parts of this
        change.  There didn't seem to be DOM bindings for the href property