@@ -1,3 +1,10 @@
+2010-01-21  Simon Hausmann  <simon.hausmann@nokia.com>
+
+        No review, rolling out 53615 as it causes two
+        crashes on the bot.
+
+        * platform/qt/Skipped:
+
 2010-01-21  Robert Hogan  <robert@roberthogan.net>
 
         Reviewed by Simon Hausmann.
